--- a/admin/add_item.html
+++ b/admin/add_item.html
@@ -60,8 +60,8 @@
           <div class="col-lg-6 col-md-12 col-sm-12">
             <form @submit.prevent="addNewItem">
               <div class="form-group">
-                <label>Image Url</label>
-                <input type="text" class="form-control" v-model="imgUrl">
+                <label>Image</label>
+                <input type="file" class="form-control-file" @change="processFile($event.target)" accept="image/png, image/jpeg">
               </div>
               <div class="form-group">
                 <label>Title</label>
