--- a/home.html
+++ b/home.html
@@ -543,7 +543,7 @@
             <div class="col-lg-3" v-for="item in filteredListAllItem">
               <br>
               <div class="card">
-                <img :src="item.imgUrl" class="card-img-top" alt="">
+                <img :src="item.imgUrl" class="card-img-top" style="height: 15rem; object-fit: cover" alt="">
                 <div class="card-body">
                   <small>
                     <a href="#" class="text-dark">{{ item.title }}</a>
